Added function for populating edit form on edit listing page

--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -107,12 +107,17 @@
           </div>
 
           <div>
-            <label for="mediaUrl">Media url</label>
-            <input type="url" name="mediaUrl" id="mediaUrl" />
+            <label for="tags">Tags</label>
+            <input id="tags" type="text" name="tags" />
+          </div>
+
+          <div>
+            <label for="urls">Media url</label>
+            <input type="url" name="urls" id="urls" multiple />
           </div>
           <div>
-            <label for="mediaAlt">Media alt</label>
-            <input id="mediaAlt" type="text" name="mediaAlt" />
+            <label for="alts">Media alt</label>
+            <input id="alts" type="text" name="alts" />
           </div>
           <div>
             <label for="endsAt">Ends at</label>
