Added a function for adding more url and alt inputs to the create form by clicking on the add more images button

--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -110,25 +110,24 @@
           </div>
 
           <div>
-            <label for="urls">Media url</label>
+            <label for="urls">Image url</label>
             <input
               type="url"
               name="urls"
               id="urls"
-              multiple
               placeholder="Enter URLs separated by commas"
             />
           </div>
           <div>
-            <label for="alts">Media alt</label>
+            <label for="alts">Image alt</label>
             <input
               id="alts"
               type="text"
               name="alts"
-              multiple
               placeholder="Enter Alt texts separated by commas"
             />
           </div>
+          <button id="Add-image-button">Add more images</button>
           <div>
             <label for="endsAt">Ends at</label>
             <input id="endsAt" type="datetime-local" name="endsAt" required />
