--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -113,12 +113,13 @@
 
           <div>
             <label for="urls">Media url</label>
-            <input type="url" name="urls" id="urls" multiple />
+            <input type="url" name="urls" id="urls" />
           </div>
           <div>
             <label for="alts">Media alt</label>
             <input id="alts" type="text" name="alts" />
           </div>
+          <button>Add more images</button>
           <div>
             <label for="endsAt">Ends at</label>
             <input id="endsAt" type="datetime-local" name="endsAt" />
