Added function to add more image url and alt inputs to edit form by clicking on add more images button

--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -119,7 +119,7 @@
             <label for="alts">Media alt</label>
             <input id="alts" type="text" name="alts" />
           </div>
-          <button>Add more images</button>
+          <button id="Add-image-button">Add more images</button>
           <div>
             <label for="endsAt">Ends at</label>
             <input id="endsAt" type="datetime-local" name="endsAt" />
