Added function for updating listings

--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -125,7 +125,7 @@
             <input id="endsAt" type="datetime-local" name="endsAt" />
           </div>
           <div class="button-container">
-            <button>Save</button>
+            <button id="save-listing-btn">Save</button>
             <button>Cancel</button>
           </div>
         </form>
