--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -126,7 +126,7 @@
           </div>
           <div class="button-container">
             <button id="save-listing-btn">Save</button>
-            <button>Cancel</button>
+            <button id="cancel-btn">Cancel</button>
           </div>
         </form>
       </div>
