fixed edit form, so that each url and alt have their own input

--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -110,16 +110,10 @@
             <label for="tags">Tags</label>
             <input id="tags" type="text" name="tags" />
           </div>
+          <div id="mediaInputs"></div>
 
-          <div>
-            <label for="urls">Media url</label>
-            <input type="url" name="urls" id="urls" />
-          </div>
-          <div>
-            <label for="alts">Media alt</label>
-            <input id="alts" type="text" name="alts" />
-          </div>
           <button id="Add-image-button">Add more images</button>
+
           <div>
             <label for="endsAt">Ends at</label>
             <input id="endsAt" type="datetime-local" name="endsAt" />
