--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <body>
     <header>
       <div class="search-bar">
-        <input type="text" placeholder="Search..." />
+        <input id="search-bar" type="text" placeholder="Search..." />
 
-        <button type="submit">Search</button>
+        <button id="search-button" type="submit">Search</button>
       </div>
 
       <div class="side-bar">
