Added constants and functions for displaying bids on my bids page

--- a/my_bids/index.html
+++ b/my_bids/index.html
@@ -85,7 +85,7 @@
     </header>
     <main>
       <h1>Your Bids</h1>
-      <div class="my-bids-container"></div>
+      <div id="my-bid-listings-container"></div>
     </main>
     <footer>
       <div>
