removed unused function imported into home.js

--- a/listing/index.html
+++ b/listing/index.html
@@ -84,7 +84,7 @@
       </div>
     </header>
     <main>
-      <div class="listing-container"></div>
+      <div id="listing-container"></div>
     </main>
     <footer>
       <div>
