Added function to filter listings by category on the home page and added js docs

--- a/index.html
+++ b/index.html
@@ -88,13 +88,21 @@
       <h1>Current Auction Listings</h1>
       <div class="Categories">
         <ul>
-          <li><a href="">Contemporary Art</a></li>
           <li>
-            <a href="">Modern Art</a>
+            <a class="category" data-category="contemporary" href=""
+              >Contemporary Art</a
+            >
           </li>
-          <li><a href=""> Photography </a></li>
           <li>
-            <a href="">Sculptures</a>
+            <a class="category" data-category="modern" href="">Modern Art</a>
+          </li>
+          <li>
+            <a class="category" data-category="photography" href="">
+              Photography
+            </a>
+          </li>
+          <li>
+            <a class="category" data-category="sculpture" href="">Sculptures</a>
           </li>
         </ul>
       </div>
