Added logo variable for logo style on desktop

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </div>
 
       <div class="side-bar">
-        <img src="images/Logo.png" alt="Art logo" />
+        <img class="logo-desktop" src="images/Logo.png" alt="Art logo" />
         <nav>
           <ul>
             <li>
