--- a/index.html
+++ b/index.html
@@ -9,75 +9,82 @@
   </head>
   <body>
     <header>
-      <div class="search-bar">
-        <input id="search-bar" type="text" placeholder="Search..." />
-
-        <button id="search-button" type="submit">Search</button>
-      </div>
-
-      <div class="side-bar">
-        <img class="logo-desktop" src="images/Logo.png" alt="Art logo" />
-        <nav>
-          <ul>
-            <li>
+      <div class="side-bar sidebar-styles">
+        <img
+          class="logo w-16 h-16 md:w-24 md:h-24"
+          src="images/Logo.png"
+          alt="Art logo"
+        />
+        <img
+          id="hamburger-icon"
+          class="w-16 h-16 md:w-24 md:h-24"
+          src="images/Hamburger-icon.png"
+          alt=""
+        />
+        <nav class="nav-styles">
+          <ul class="nav-styles">
+            <li class="sidebar-li-layout">
               <a href="/">
-                <img src="images/icons8-home-Desktop.png" alt="home icon" />
-
-                Home</a
-              >
+                <img
+                  class="w-[70px] h-[70px] md:w-[50px] md:h-[50px]"
+                  src="images/icons8-home-Desktop.png"
+                  alt="home icon"
+                />
+                <span class="hidden">Home</span>
+              </a>
             </li>
-            <li>
+            <li class="sidebar-li-layout">
               <a id="profile-link-nav" href="/profile/">
                 <img src="images/icons8-user-desktop.png" alt="profile icon" />
-                Profile</a
+                <span class="hidden">My Profile</span></a
               >
             </li>
 
-            <li>
+            <li class="sidebar-li-layout">
               <a id="my-listings-link-nav" href="/my_listings/">
                 <img
                   src="images/icons8-my-listings-desktop.png"
                   alt="my listings icon"
                 />
-                My Listings
+                <span class="hidden">My Listings</span>
               </a>
             </li>
-            <li>
+            <li class="sidebar-li-layout">
               <a id="my-bids-link-nav" href="/my_bids/">
-                <img src="images/icons8-bids-Desktop.png" alt="bids icon" />My
-                Bids</a
-              >
+                <img src="images/icons8-bids-Desktop.png" alt="bids icon" />
+                <span class="hidden">My Bids</span>
+              </a>
             </li>
-            <li>
+            <li class="sidebar-li-layout">
               <a id="create-listing-link-nav" href="/listing/create/">
                 <img src="images/icons8-add-desktop.png" alt="add icon" />
 
-                Create Listing</a
+                <span class="hidden">Create Listing</span></a
               >
             </li>
-            <li>
+            <li class="sidebar-li-layout">
               <a id="reg-link-nav" href="/auth/">
                 <img
                   src="images/icons8-register-desktop.png"
                   alt="register icon"
                 />
-                Register
+                <span class="hidden">Register</span>
               </a>
             </li>
-            <li>
+            <li class="sidebar-li-layout">
               <a id="sign-in-link-nav" href="/auth/">
                 <img src="images/sign-in-desktop.png" alt="sign in icon" />
-                Sign in
+                <span class="hidden">Sign in</span>
               </a>
             </li>
-            <li>
+            <li class="sidebar-li-layout">
               <button class="sign-out-btn">
                 <img
                   class=""
                   src="images/icons8-sign-out-desktop.png"
                   alt="sign out icon"
                 />
-                Sign out
+                <span class="hidden">Sign Out</span>
               </button>
             </li>
           </ul>
