--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -10,7 +10,11 @@
   <body>
     <header>
       <div class="side-bar">
-        <img src="../../images/Logo.png" alt="Art logo" />
+        <img
+          class="logo w-16 h-16 md:w-24 md:h-24"
+          src="../../images/Logo.png"
+          alt="Art logo"
+        />
         <nav>
           <ul>
             <li>
