--- a/index.html
+++ b/index.html
@@ -9,33 +9,43 @@
   </head>
   <body>
     <header>
+      <div class="search-bar">
+        <input type="text" id="search-bar" placeholder="Search listings..." />
+        <button id="search-button">Search</button>
+      </div>
       <div class="side-bar sidebar-styles">
         <img
-          class="logo w-16 h-16 md:w-24 md:h-24"
+          class="logo w-16 h-16 md:w-20 md:h-20"
           src="images/Logo.png"
           alt="Art logo"
         />
         <img
           id="hamburger-icon"
-          class="w-16 h-16 md:w-24 md:h-24"
+          class="w-16 h-16 md:w-20 md:h-20"
           src="images/Hamburger-icon.png"
           alt=""
         />
         <nav class="nav-styles">
-          <ul class="nav-styles">
+          <ul class="hidden">
             <li class="sidebar-li-layout">
               <a href="/">
                 <img
-                  class="w-[70px] h-[70px] md:w-[50px] md:h-[50px]"
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
                   src="images/icons8-home-Desktop.png"
                   alt="home icon"
                 />
                 <span class="hidden">Home</span>
               </a>
             </li>
-            <li class="sidebar-li-layout">
+            <li
+              class="sidebar-li-layout w-[70px] h-[70px] md:w-[50px] md:h-[50px]"
+            >
               <a id="profile-link-nav" href="/profile/">
-                <img src="images/icons8-user-desktop.png" alt="profile icon" />
+                <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="images/icons8-user-desktop.png"
+                  alt="profile icon"
+                />
                 <span class="hidden">My Profile</span></a
               >
             </li>
@@ -43,6 +53,7 @@
             <li class="sidebar-li-layout">
               <a id="my-listings-link-nav" href="/my_listings/">
                 <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
                   src="images/icons8-my-listings-desktop.png"
                   alt="my listings icon"
                 />
@@ -51,13 +62,21 @@
             </li>
             <li class="sidebar-li-layout">
               <a id="my-bids-link-nav" href="/my_bids/">
-                <img src="images/icons8-bids-Desktop.png" alt="bids icon" />
+                <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="images/icons8-bids-Desktop.png"
+                  alt="bids icon"
+                />
                 <span class="hidden">My Bids</span>
               </a>
             </li>
             <li class="sidebar-li-layout">
               <a id="create-listing-link-nav" href="/listing/create/">
-                <img src="images/icons8-add-desktop.png" alt="add icon" />
+                <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="images/icons8-add-desktop.png"
+                  alt="add icon"
+                />
 
                 <span class="hidden">Create Listing</span></a
               >
@@ -65,6 +84,7 @@
             <li class="sidebar-li-layout">
               <a id="reg-link-nav" href="/auth/">
                 <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
                   src="images/icons8-register-desktop.png"
                   alt="register icon"
                 />
@@ -73,14 +93,18 @@
             </li>
             <li class="sidebar-li-layout">
               <a id="sign-in-link-nav" href="/auth/">
-                <img src="images/sign-in-desktop.png" alt="sign in icon" />
+                <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="images/sign-in-desktop.png"
+                  alt="sign in icon"
+                />
                 <span class="hidden">Sign in</span>
               </a>
             </li>
             <li class="sidebar-li-layout">
               <button class="sign-out-btn">
                 <img
-                  class=""
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
                   src="images/icons8-sign-out-desktop.png"
                   alt="sign out icon"
                 />
