Added styles to the header and search bar

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <script type="module" src="./src/app.js" defer></script>
   </head>
   <body>
-    <header>
+    <header class="w-full h-32">
       <div class="search-bar">
+        <img
+          src="./images/icons8-search-50.png"
+          alt="search icon"
+          class="search-icon w-8 h-8 absolute"
+        />
         <input type="text" id="search-bar" placeholder="Search listings..." />
         <button id="search-button">Search</button>
       </div>
