Added more styles to search bar

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   </head>
   <body>
     <header class="w-full h-32">
-      <div class="search-bar">
-        <img
-          src="./images/icons8-search-50.png"
-          alt="search icon"
-          class="search-icon w-8 h-8 absolute"
-        />
+      <div class="search-bar search-bar-layout">
+        <div class="">
+          <img
+            src="./images/icons8-search-50.png"
+            alt="search icon"
+            class="search-icon w-8 h-8 absolute"
+          />
+        </div>
         <input type="text" id="search-bar" placeholder="Search listings..." />
         <button id="search-button">Search</button>
       </div>
