Added more styles to search bar on home page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
             class="search-icon w-8 h-8 absolute"
           />
         </div>
-        <input type="text" id="search-bar" placeholder="Search listings..." />
+        <input
+          type="text"
+          id="search-bar"
+          class="search-input"
+          placeholder="Search listings..."
+        />
         <button id="search-button">Search</button>
       </div>
       <div class="side-bar sidebar-styles">
