Fixed sidebar function

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Art Auction App - Home</title>
     <script type="module" src="./src/app.js" defer></script>
   </head>
-  <body>
+  <body class="bg-black">
     <header class="w-full h-32">
       <div class="search-bar search-bar-layout">
         <div class="flex flex-col justify-center">
@@ -110,7 +110,7 @@
                   src="images/icons8-register-desktop.png"
                   alt="register icon"
                 />
-                <span class="hidden">Register</span>
+                <span class="hidden span-text">Register</span>
               </a>
             </li>
             <li id="sign-in-link-nav" class="">
