Fixed sidebar functiion and added styles to H1

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="bg-black">
     <header class="w-full h-32">
-      <div class="search-bar search-bar-layout">
+      <div class="search-bar search-bar-layout sidebar-height-when-closed">
         <div class="flex flex-col justify-center">
           <img
             src="./images/icons8-search-50.png"
@@ -138,7 +138,9 @@
       </div>
     </header>
     <main>
-      <h1>Current Auction Listings</h1>
+      <div class="flex-row-center">
+        <h1 class="h1-mobile md:h1-desktop">Current Auction Listings</h1>
+      </div>
       <div class="Categories">
         <ul>
           <li>
