Styled H2s on home page

--- a/index.html
+++ b/index.html
@@ -142,22 +142,39 @@
         <h1 class="h1-mobile md:h1-desktop">Current Auction Listings</h1>
       </div>
       <div class="Categories">
-        <ul>
+        <ul class="flex-row-center gap-4">
           <li>
-            <a class="category" data-category="contemporary" href=""
+            <a
+              class="category h2-mobile md:h2-desktop"
+              data-category="contemporary"
+              href=""
               >Contemporary Art</a
             >
           </li>
           <li>
-            <a class="category" data-category="modern" href="">Modern Art</a>
+            <a
+              class="category category h2-mobile md:h2-desktop"
+              data-category="modern"
+              href=""
+              >Modern Art</a
+            >
           </li>
           <li>
-            <a class="category" data-category="photography" href="">
+            <a
+              class="category category h2-mobile md:h2-desktop"
+              data-category="photography"
+              href=""
+            >
               Photography
             </a>
           </li>
           <li>
-            <a class="category" data-category="sculpture" href="">Sculptures</a>
+            <a
+              class="category category h2-mobile md:h2-desktop"
+              data-category="sculpture"
+              href=""
+              >Sculptures</a
+            >
           </li>
         </ul>
       </div>
