trying to fix h1 and h2 styles on home page

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <ul class="flex-row-center gap-4">
           <li>
             <a
-              class="category h2-mobile md:h2-desktop"
+              class="h2-mobile md:h2-desktop category"
               data-category="contemporary"
               href=""
               >Contemporary Art</a
