--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="module" src="./src/app.js" defer></script>
   </head>
   <body class="bg-black">
-    <header class="w-full h-32">
+    <header class="w-full h-32 pt-6">
       <div class="search-bar search-bar-layout sidebar-height-when-closed">
         <div class="flex flex-col justify-center">
           <img
@@ -17,15 +17,21 @@
             class="search-icon w-8 h-8 absolute ml-2"
           />
         </div>
-        <input
-          type="text"
-          id="search-bar"
-          class="search-input gold-labels"
-          placeholder="Search listings..."
-        />
-        <button id="search-button" class="button-styles pl-8 pr-8">
-          Search
-        </button>
+        <div class="flex-col-center-layout md:flex md:flex-row gap-2">
+          <input
+            type="text"
+            id="search-bar"
+            class="search-input pl-6 pr-22 p-2 md:pl-12 md:pr-32 gold-labels"
+            placeholder="Search listings..."
+          />
+
+          <button
+            id="search-button"
+            class="button-styles md:pl-8 md:pr-8 pl-3 pr-3"
+          >
+            Search
+          </button>
+        </div>
       </div>
       <div class="side-bar sidebar-styles">
         <img
@@ -139,13 +145,13 @@
     </header>
     <main>
       <div class="flex-row-center">
-        <h1 class="h1-mobile md:h1-desktop">Current Auction Listings</h1>
+        <h1 class="h1-styles md:text-3xl">Current Auction Listings</h1>
       </div>
-      <div class="Categories">
-        <ul class="flex-row-center gap-4">
+      <div class="Categories flex-row-center">
+        <ul class="two-column-layout md:flex md:justify-center gap-4">
           <li>
             <a
-              class="h2-mobile md:h2-desktop category"
+              class="h2-mobile md:text-2xl category"
               data-category="contemporary"
               href=""
               >Contemporary Art</a
@@ -153,7 +159,7 @@
           </li>
           <li>
             <a
-              class="category category h2-mobile md:h2-desktop"
+              class="category h2-mobile md:text-2xl"
               data-category="modern"
               href=""
               >Modern Art</a
@@ -161,7 +167,7 @@
           </li>
           <li>
             <a
-              class="category category h2-mobile md:h2-desktop"
+              class="category h2-mobile md:text-2xl"
               data-category="photography"
               href=""
             >
@@ -170,7 +176,7 @@
           </li>
           <li>
             <a
-              class="category category h2-mobile md:h2-desktop"
+              class="category h2-mobile md:text-2xl"
               data-category="sculpture"
               href=""
               >Sculptures</a
