Fixed sidebar nav

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <body class="bg-black">
     <header class="w-full h-42 pt-6">
       <div class="search-bar search-bar-layout sidebar-height-when-closed">
-        <div class="flex-col-center-layout md:flex md:flex-row gap-2 relative">
+        <div
+          class="flex-col-center-layout md:flex md:flex-row gap-2 relative h-20"
+        >
           <input
             type="text"
             id="search-bar"
@@ -36,7 +38,7 @@
       </div>
       <div class="side-bar sidebar-styles">
         <img
-          class="logo w-16 h-16 md:w-20 md:h-20"
+          class="logo w-16 h-auto md:w-20 md:h-auto"
           src="images/Logo.png"
           alt="Art logo"
         />
