Fixed edit function

--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -112,7 +112,7 @@
           </div>
           <div id="mediaInputs"></div>
 
-          <button id="Add-image-button">Add more images</button>
+          <button id="Add-image-button-edit">Add more images</button>
 
           <div>
             <label for="endsAt">Ends at</label>
