Applied styles to footer on home page

--- a/index.html
+++ b/index.html
@@ -190,22 +190,34 @@
 
       <div id="all-auction-listings"></div>
     </main>
-    <footer>
-      <div>
+    <footer class="footer">
+      <div class="footer-text-layout">
         <a href="">Contact</a>
         <a href="">About</a>
         <a href="">Policies</a>
         <a href="">Terms and Conditions</a>
       </div>
-      <div>
+      <div class="social-media-icons-box">
         <a href="">
-          <img src="images/icons8-facebook-desktop.png" alt="facebook icon" />
+          <img
+            class="social-media-icons"
+            src="images/icons8-facebook-desktop.png"
+            alt="facebook icon"
+          />
         </a>
         <a href="">
-          <img src="images/icons8-instagram-desktop.png" alt="instagram icon" />
+          <img
+            class="social-media-icons"
+            src="images/icons8-instagram-desktop.png"
+            alt="instagram icon"
+          />
         </a>
         <a href="">
-          <img src="images/icons8-twitter-desktop.png" alt="twitter icon" />
+          <img
+            class="social-media-icons"
+            src="images/icons8-twitter-desktop.png"
+            alt="twitter icon"
+          />
         </a>
       </div>
     </footer>
