--- a/listing/index.html
+++ b/listing/index.html
@@ -9,78 +9,110 @@
   </head>
   <body>
     <header>
-      <div class="side-bar">
+      <div class="side-bar sidebar-styles">
         <img
-          class="logo w-16 h-16 md:w-24 md:h-24"
-          src="../images/Logo.png"
+          class="logo w-16 h-auto md:w-20 md:h-auto"
+          src="../../images/Logo.png"
           alt="Art logo"
         />
-        <nav>
-          <ul>
-            <li>
-              <a href="/">
-                <img src="../images/icons8-home-Desktop.png" alt="home icon" />
-
-                Home</a
-              >
-            </li>
-            <li>
-              <a id="profile-link-nav" href="/profile/">
+        <button id="hamburger-btn">
+          <img
+            id="hamburger-icon"
+            class="w-16 h-16 md:w-20 md:h-20"
+            src="../../images/Hamburger-icon.png"
+            alt=""
+          />
+        </button>
+        <nav class="nav nav-styles">
+          <ul id="nav-menu" class="hidden">
+            <li class="sidebar-li-layout">
+              <a class="nav-link link-flex" href="/">
                 <img
-                  src="../images/icons8-user-desktop.png"
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="../../images/icons8-home-Desktop.png"
+                  alt="home icon"
+                />
+                <span class="span-text hidden">Home</span>
+              </a>
+            </li>
+            <li id="profile-link-nav">
+              <a class="nav-link link-flex" href="/profile/">
+                <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="../../images/icons8-user-desktop.png"
                   alt="profile icon"
                 />
-                Profile</a
+                <span class="span-text hidden">My Profile</span></a
               >
             </li>
 
-            <li>
-              <a id="my-listings-link-nav" href="/my_listings/">
+            <li id="my-listings-link-nav" class="">
+              <a class="nav-link link-flex" href="/my_listings/">
                 <img
-                  src="../images/icons8-my-listings-desktop.png"
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="../../images/icons8-my-listings-desktop.png"
                   alt="my listings icon"
                 />
-                My Listings
+                <span class="span-text hidden">My Listings</span>
               </a>
             </li>
-            <li>
-              <a id="my-bids-link-nav" href="/my_bids/">
+            <li class="">
+              <a
+                class="nav-link link-flex"
+                id="my-bids-link-nav"
+                href="/my_bids/"
+              >
                 <img
-                  src="../images/icons8-bids-Desktop.png"
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="../../images/icons8-bids-Desktop.png"
                   alt="bids icon"
-                />My Bids</a
-              >
+                />
+                <span class="hidden span-text">My Bids</span>
+              </a>
             </li>
-            <li>
-              <a id="create-listing-link-nav" href="/listing/create/">
-                <img src="../images/icons8-add-desktop.png" alt="add icon" />
-
-                Create Listing</a
+            <li class="">
+              <a
+                class="nav-link link-flex"
+                id="create-listing-link-nav"
+                href="/listing/create/"
               >
-            </li>
-            <li>
-              <a id="reg-link-nav" href="/auth/">
                 <img
-                  src="../images/icons8-register-desktop.png"
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="../../images/icons8-add-desktop.png"
+                  alt="add icon"
+                />
+
+                <span class="hidden span-text">Create Listing</span></a
+              >
+            </li>
+            <li class="">
+              <a class="nav-link link-flex" id="reg-link-nav" href="/auth/">
+                <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="../../images/icons8-register-desktop.png"
                   alt="register icon"
                 />
-                Register
+                <span class="hidden span-text">Register</span>
               </a>
             </li>
-            <li>
-              <a id="sign-in-link-nav" href="/auth/">
-                <img src="../images/sign-in-desktop.png" alt="sign in icon" />
-                Sign in
-              </a>
-            </li>
-            <li>
-              <button class="sign-out-btn">
+            <li id="sign-in-link-nav" class="">
+              <a class="nav-link link-flex" href="/auth/">
                 <img
-                  class=""
-                  src="../images/icons8-sign-out-desktop.png"
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="../../images/sign-in-desktop.png"
+                  alt="sign in icon"
+                />
+                <span class="hidden span-text">Sign in</span>
+              </a>
+            </li>
+            <li class="sidebar-li-layout">
+              <button class="sign-out-btn nav-link link-flex">
+                <img
+                  class="w-[60px] h-[60px] md:w-[50px] md:h-[50px]"
+                  src="../../images/icons8-sign-out-desktop.png"
                   alt="sign out icon"
                 />
-                Sign out
+                <span class="hidden span-text">Sign Out</span>
               </button>
             </li>
           </ul>
