--- a/listing/index.html
+++ b/listing/index.html
@@ -7,7 +7,7 @@
     <title>My Art Auction App - Auction listing</title>
     <script type="module" src="../src/app.js" defer></script>
   </head>
-  <body>
+  <body class="bg-black">
     <header>
       <div class="side-bar sidebar-styles">
         <img
@@ -122,28 +122,34 @@
     <main>
       <div id="listing-container"></div>
     </main>
-    <footer>
-      <div>
+    <footer class="footer">
+      <div class="footer-text-layout">
         <a href="">Contact</a>
         <a href="">About</a>
         <a href="">Policies</a>
         <a href="">Terms and Conditions</a>
       </div>
-      <div>
+      <div class="social-media-icons-box">
         <a href="">
           <img
+            class="social-media-icons"
             src="../images/icons8-facebook-desktop.png"
             alt="facebook icon"
           />
         </a>
         <a href="">
           <img
+            class="social-media-icons"
             src="../images/icons8-instagram-desktop.png"
             alt="instagram icon"
           />
         </a>
         <a href="">
-          <img src="../images/icons8-twitter-desktop.png" alt="twitter icon" />
+          <img
+            class="social-media-icons"
+            src="../images/icons8-twitter-desktop.png"
+            alt="twitter icon"
+          />
         </a>
       </div>
     </footer>
