Added more styles to listing page and modified h1, h2 and label class styles in css file

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </header>
     <main>
       <div class="flex-row-center">
-        <h1 class="h1-styles md:text-3xl">Current Auction Listings</h1>
+        <h1 class="h1-styles">Current Auction Listings</h1>
       </div>
       <div class="Categories flex-row-center">
         <ul class="two-column-layout md:flex md:justify-center gap-4">
