Added more styles to listing page

--- a/listing/create/index.html
+++ b/listing/create/index.html
@@ -7,7 +7,7 @@
     <title>My Art Auction App - Create a Listing</title>
     <script type="module" src="../../src/app.js" defer></script>
   </head>
-  <body>
+  <body class="body-styles">
     <header>
       <div class="side-bar">
         <img
