--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Art Auction App - Home</title>
     <script type="module" src="./src/app.js" defer></script>
   </head>
-  <body class="bg-black">
+  <body class="bg-black body-styles">
     <header class="w-full h-42 pt-6">
       <div class="search-bar search-bar-layout sidebar-height-when-closed">
         <div
@@ -146,7 +146,7 @@
         </nav>
       </div>
     </header>
-    <main>
+    <main class="flex-1">
       <div class="flex-row-center">
         <h1 class="h1-styles">Current Auction Listings</h1>
       </div>
