--- a/listing/edit/index.html
+++ b/listing/edit/index.html
@@ -7,7 +7,7 @@
     <title>My Art Auction App - Edit a Listing</title>
     <script type="module" src="../../src/app.js" defer></script>
   </head>
-  <body>
+  <body class="body-styles">
     <header>
       <div class="side-bar">
         <img src="../../images/Logo.png" alt="Art logo" />
