--- a/listing/index.html
+++ b/listing/index.html
@@ -7,7 +7,7 @@
     <title>My Art Auction App - Auction listing</title>
     <script type="module" src="../src/app.js" defer></script>
   </head>
-  <body class="bg-black">
+  <body class="bg-black body-styles">
     <header>
       <div class="side-bar sidebar-styles">
         <img
@@ -119,7 +119,7 @@
         </nav>
       </div>
     </header>
-    <main>
+    <main class="flex-1">
       <div id="listing-container"></div>
     </main>
     <footer class="footer">
