--- a/my_bids/index.html
+++ b/my_bids/index.html
@@ -7,7 +7,7 @@
     <title>My Art Auction App - My Bids</title>
     <script type="module" src="../src/app.js" defer></script>
   </head>
-  <body>
+  <body class="body-styles">
     <header>
       <div class="side-bar">
         <img
