Started adding styles to my listings page

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <ul class="two-column-layout md:flex md:justify-center gap-4">
           <li>
             <a
-              class="h2-mobile md:text-2xl category"
+              class="h2-styles md:text-2xl category"
               data-category="contemporary"
               href=""
               >Contemporary Art</a
@@ -162,7 +162,7 @@
           </li>
           <li>
             <a
-              class="category h2-mobile md:text-2xl"
+              class="category h2-styles md:text-2xl"
               data-category="modern"
               href=""
               >Modern Art</a
@@ -170,7 +170,7 @@
           </li>
           <li>
             <a
-              class="category h2-mobile md:text-2xl"
+              class="category h2-styles md:text-2xl"
               data-category="photography"
               href=""
             >
@@ -179,7 +179,7 @@
           </li>
           <li>
             <a
-              class="category h2-mobile md:text-2xl"
+              class="category h2-styles md:text-2xl"
               data-category="sculpture"
               href=""
               >Sculptures</a
