Modified styles on listing page

--- a/listing/index.html
+++ b/listing/index.html
@@ -120,7 +120,7 @@
       </div>
     </header>
     <main class="flex-1">
-      <div id="listing-container"></div>
+      <div id="all-auction-listings"></div>
     </main>
     <footer class="footer">
       <div class="footer-text-layout">
