Added more listings to my listings page

--- a/listing/index.html
+++ b/listing/index.html
@@ -7,7 +7,7 @@
     <title>My Art Auction App - Auction listing</title>
     <script type="module" src="../src/app.js" defer></script>
   </head>
-  <body class="bg-black body-styles">
+  <body class="body-styles">
     <header>
       <div class="side-bar sidebar-styles">
         <img
