--- a/my_listings/index.html
+++ b/my_listings/index.html
@@ -120,7 +120,9 @@
       </div>
     </header>
     <main>
-      <h1>My Listings</h1>
+      <div class="flex-row-center mt-4">
+        <h1 class="h1-styles">My Listings</h1>
+      </div>
 
       <div id="my-auction-listings"></div>
     </main>
