--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html class="" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -7,7 +7,7 @@
     <title>My Art Auction App - Home</title>
     <script type="module" src="./src/app.js" defer></script>
   </head>
-  <body class="bg-black body-styles">
+  <body class="body-styles">
     <header class="w-full h-42 pt-6">
       <div class="search-bar search-bar-layout sidebar-height-when-closed">
         <div
