added success message to delete function

--- a/my_listings/index.html
+++ b/my_listings/index.html
@@ -119,7 +119,7 @@
         </nav>
       </div>
     </header>
-    <main>
+    <main class="flex-1">
       <div class="flex-row-center mt-4">
         <h1 class="h1-styles">My Listings</h1>
       </div>
