Added listing hover function to listings on listing page and my listings page, so that listings appear over the side bar at smaller screen size when hovering on them

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     </header>
     <main class="flex-1">
       <div class="flex-row-center">
-        <h1 class="h1-styles">Current Auction Listings</h1>
+        <h1 class="h1-styles mt-8 md:mt-0">Current Auction Listings</h1>
       </div>
       <div class="Categories flex-row-center">
         <ul class="two-column-layout md:flex md:justify-center gap-4">
