--- a/auth/index.html
+++ b/auth/index.html
@@ -132,11 +132,14 @@
           class="sign-in-form sign-in-form-styles form-styles"
           name="sign-in"
         >
+          <div class="flex flex-row">
+            <button class="">X</button>
+          </div>
           <h1 class="h1-styles form-title-styles">Sign in</h1>
           <div class="flex flex-row">
-            <div class="mt-4">
+            <div class="mt-3">
               <img
-                class="w-[30px] h-[30px] md:w-[50px] md:h-[50px]"
+                class="w-[30px] h-[30px] md:w-[50px] md:h-[50px] mt-2"
                 src="/images/icons8-username-64.png"
                 alt=""
               />
@@ -147,16 +150,27 @@
             </div>
           </div>
 
-          <div class="flex flex-col">
-            <label class="gold-labels" for="password">Password</label>
-            <input type="password" name="password" id="password" required />
+          <div class="flex flex-row">
+            <div class="mt-4">
+              <img
+                class="w-[30px] h-[30px] md:w-[50px] md:h-[50px]"
+                src="/images/icons8-password-50.png"
+                alt=""
+              />
+            </div>
+
+            <div class="flex flex-col">
+              <label class="gold-labels" for="password">Password</label>
+              <input type="password" name="password" id="password" required />
+            </div>
           </div>
+
           <button class="button-styles">Sign in</button>
         </form>
         <div id="error-message-sign-in-form"></div>
       </div>
 
-      <div class="hidden" id="register-form">
+      <div class="hidden relative" id="register-form">
         <h2>Register</h2>
         <form id="reg-form" method="post" class="" name="register">
           <div>
